# src/controllers/Employee.js
@@ -24,7 +24,9 @@ module.exports.addEmployee = function addEmployee (req, res, next) {
 };
 
 module.exports.employeeStatus = function employeeStatus (req, res, next) {
-  Employee.employeeStatus()
+  var empId = req.swagger.params['EmpId'].value;
+  var employeeStatusCheck = req.swagger.params['EmployeeStatusCheck'].value;
+  Employee.employeeStatus(empId,employeeStatusCheck)
     .then(function (response) {
       utils.writeJson(res, response);
     })
